# Session-4-pytorch-lightning

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
configs/: eval.yaml  infer.yaml  train.yaml
configs/experiment/: dogbreed_ex.yaml
configs/hydra/: default.yaml
configs/hydra/hydra_logging/: colorlog.yaml
configs/hydra/job_logging/: colorlog.yaml
configs/model/: dog_classifier.yaml
configs/paths/: default.yaml
outputs/2024-10-06/02-55-48/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-06/03-00-55/.hydra/: hydra.yaml
outputs/2024-10-06/03-07-38/.hydra/: hydra.yaml  overrides.yaml
outputs/2024-10-06/03-09-54/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-06/03-10-34/.hydra/: hydra.yaml
outputs/2024-10-06/03-15-51/.hydra/: config.yaml  hydra.yaml
outputs/2024-10-06/03-17-23/.hydra/: hydra.yaml
predictions/: Beagle_pred_Beagle_conf_0.99.txt  Boxer_pred_Boxer_conf_1.00.txt  Bulldog_pred_Bulldog_conf_1.00.txt  Dachshund_pred_Dachshund_conf_1.00.txt  Poodle_pred_Poodle_conf_0.77.txt  Rottweiler_pred_Rottweiler_conf_1.00.txt  Yorkshire_pred_Yorkshire_Terrier_conf_0.99.txt  Yorkshire_pred_Yorkshire_Terrier_conf_1.00.txt
src/: eval.py  infer.py  train.py
src/datamodules/: dog_breed.py
src/models/: catdog_classifier.py
src/utils/: __init__.py  checkpoint_utils.py  rich_utils.py  utils.py
src/utils/__pycache__/: pylogger.cpython-312.pyc:Zone.Identifier
tests/datamodules/: test_dog_breed_datamodule.py
tests/test_datamodule/: test_dog_breed_datamodule.py
tests/test_training/: test_train.py
(+72 files in other folders)
